@@ -21,7 +21,7 @@ or \sQuote{address}.}
 
 \item{apikey}{The API key used to access the service. It can be
 supplied as an argument here, via the global option
-\code{rpushbutton.key}, or via the file \code{~/.rpushbullet.json}
+\code{rpushbullet.key}, or via the file \code{~/.rpushbullet.json}
 which is read at package initialization (and, if found, also sets
 the global option).}
 
